--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
   "dependencies": {},
   "devDependencies": {
     "expect.js": "^0.3.1",
-    "mocha": "^6.1.4"
+    "mocha": "^6.1.4",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2"
   },
   "scripts": {
-    "test": "mocha tests"
+    "test": "mocha tests",
+    "build": "webpack --mode=production"
   },
   "repository": {
     "type": "git",
