--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
   "dependencies": {},
   "devDependencies": {
     "expect.js": "^0.3.1",
+    "jsdom": "^15.1.0",
+    "jsdom-global": "^3.0.2",
     "mocha": "^6.1.4",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2"
   },
   "scripts": {
-    "test": "webpack --mode=development --config webpack.config-test.js && mocha tests_build/bundle.js",
+    "test": "webpack --mode=development --config webpack.config-test.js && mocha tests_build/bundle.js --require jsdom-global/register",
     "build": "webpack --mode=production"
   },
   "repository": {
