--- a/package.json
+++ b/package.json
@@ -1,21 +1,33 @@
 {
   "name": "awesome-band",
-  "version": "1.0.0",
+  "version": "0.3.0",
   "description": "A music creation webapp",
   "main": "index.js",
-  "dependencies": {},
+  "dependencies": {
+    "clean-webpack-plugin": "^2.0.2"
+  },
   "devDependencies": {
+    "css-loader": "^2.1.1",
     "expect.js": "^0.3.1",
+    "file-loader": "^3.0.1",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "jsdom": "^15.1.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^6.1.4",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
     "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.4.1",
+    "webpack-merge": "^4.2.1"
   },
   "scripts": {
-    "test": "webpack --mode=development --config webpack.config-test.js && mocha tests_build/bundle.js --require jsdom-global/register",
-    "build": "webpack --mode=production",
-    "now-build": "webpack --mode=production && rm -rf node_modules"
+    "test": "webpack --config webpack.test.js && mocha tests_build/bundle.js --require jsdom-global/register",
+    "dev": "webpack-dev-server --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
+    "now-build": "npm run build && rm -rf node_modules"
   },
   "repository": {
     "type": "git",
