--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A music creation webapp",
   "main": "index.js",
   "dependencies": {
-    "clean-webpack-plugin": "^2.0.2"
+    "clean-webpack-plugin": "^2.0.2",
+    "mousetrap": "^1.6.3"
   },
   "devDependencies": {
     "css-loader": "^2.1.1",
