--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "clean-webpack-plugin": "^2.0.2",
-    "mousetrap": "^1.6.3"
+    "mousetrap": "^1.6.3",
+    "tippy.js": "^4.3.2"
   },
   "devDependencies": {
     "css-loader": "^2.1.1",
