--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "clean-webpack-plugin": "^2.0.2",
     "mousetrap": "^1.6.3",
+    "soundfont-player": "^0.11.0",
     "tippy.js": "^4.3.2"
   },
   "devDependencies": {
