--- a/package.json
+++ b/package.json
@@ -1,15 +1,11 @@
 {
   "name": "swave",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "A music creation webapp",
   "main": "index.js",
-  "dependencies": {
-    "clean-webpack-plugin": "^2.0.2",
-    "mousetrap": "^1.6.3",
-    "soundfont-player": "^0.11.0",
-    "tippy.js": "^4.3.2"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^2.1.1",
     "expect.js": "^0.3.1",
     "file-loader": "^3.0.1",
@@ -18,9 +14,11 @@
     "jsdom": "^15.1.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^6.1.4",
+    "mousetrap": "^1.6.3",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "tippy.js": "^4.3.5",
     "tone": "^13.4.9",
     "webpack": "^4.31.0",
     "webpack-cli": "^3.3.2",
@@ -38,7 +36,7 @@
     "url": "git+https://github.com/EnzoCranford/swave.git"
   },
   "author": "Enzo Cranford",
-  "license": "ISC",
+  "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/EnzoCranford/swave/issues"
   },
