--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {},
   "devDependencies": {
+    "autoprefixer": "^9.6.1",
     "clean-webpack-plugin": "^2.0.2",
     "css-loader": "^2.1.1",
     "expect.js": "^0.3.1",
@@ -16,6 +17,7 @@
     "mocha": "^6.2.0",
     "mousetrap": "^1.6.3",
     "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
     "sass-loader": "^7.2.0",
     "style-loader": "^0.23.1",
     "tippy.js": "^4.3.5",
